[package]
name = "mcgooey"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/actuday6418/xando"
keywords = ["gamedev", "graphics", "gui"]
description = "A GUI system that works exclusively with percentages and widget trees"

[dependencies]
macroquad = "*"
auto_impl = "*"

[features]
debug_draw = []
