[package]
name = "xando"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.android.activity_attributes]
"android:screenOrientation" = "userLandscape"

[dependencies]
mcgooey = "*"

[features]
debug_draw = []
